SP4_console_TORT_LECORNEC

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /TP2_manip_TORT_LECORNEC/nbproject/private/
 /TP2_relation_1_TORT_LECORNEC/nbproject/private/
 /TP2_relation_1_TORT_LECORNEC/build/
+/SP4_console_TORT_LECORNEC/nbproject/private/
+/SP4_console_TORT_LECORNEC/build/
